{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 167,
  "lineage": "72adbb1a-f5dc-ffdb-739c-eaadd29756cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myecs_nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb7528b219207122",
            "association_id": "eipassoc-01fa14432eea8fba5",
            "domain": "vpc",
            "id": "eipalloc-0bb7528b219207122",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0d300da2b20cd496c",
            "private_dns": "ip-10-0-1-249.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-52-195-124-114.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.124.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myecs_nat_1a"
            },
            "tags_all": {
              "Name": "myecs_nat_1a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.myecs_igw",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myecs_nat_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d1ade897c55ba2a",
            "association_id": "eipassoc-0252b8a94127e7276",
            "domain": "vpc",
            "id": "eipalloc-00d1ade897c55ba2a",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e6e7ca6001ee5f47",
            "private_dns": "ip-10-0-2-97.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.97",
            "public_dns": "ec2-54-249-226-247.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.226.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myecs_nat_1c"
            },
            "tags_all": {
              "Name": "myecs_nat_1c"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.myecs_igw",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:internet-gateway/igw-0831ec71b35ce5814",
            "id": "igw-0831ec71b35ce5814",
            "owner_id": "786832920677",
            "tags": {
              "Name": "myecs_igw"
            },
            "tags_all": {
              "Name": "myecs_igw"
            },
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myecs_nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb7528b219207122",
            "association_id": "eipassoc-01fa14432eea8fba5",
            "connectivity_type": "public",
            "id": "nat-0abdeab892eed4d64",
            "network_interface_id": "eni-0d300da2b20cd496c",
            "private_ip": "10.0.1.249",
            "public_ip": "52.195.124.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0424c04271c4b727c",
            "tags": {
              "Name": "myecs_nat_1a"
            },
            "tags_all": {
              "Name": "myecs_nat_1a"
            }
          },
          "dependencies": [
            "aws_eip.myecs_nat_1a",
            "aws_internet_gateway.myecs_igw",
            "aws_subnet.myecs_public_1a",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myecs_nat_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d1ade897c55ba2a",
            "association_id": "eipassoc-0252b8a94127e7276",
            "connectivity_type": "public",
            "id": "nat-0bf31239247a4678b",
            "network_interface_id": "eni-0e6e7ca6001ee5f47",
            "private_ip": "10.0.2.97",
            "public_ip": "54.249.226.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09cf429a5729a7fcd",
            "tags": {
              "Name": "myecs_nat_1c"
            },
            "tags_all": {
              "Name": "myecs_nat_1c"
            }
          },
          "dependencies": [
            "aws_eip.myecs_nat_1c",
            "aws_internet_gateway.myecs_igw",
            "aws_subnet.myecs_public_1c",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "myecs_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0831ec71b35ce5814",
            "id": "r-rtb-0d5610ba3a467662c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5610ba3a467662c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myecs_igw",
            "aws_route_table.myecs_route_table",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "myecs_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e8d6fab5269aad61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0abdeab892eed4d64",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e8d6fab5269aad6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.myecs_nat_1a",
            "aws_route_table.myecs_route_table_private_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "myecs_route_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06750f75f2810506b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf31239247a4678b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06750f75f2810506b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.myecs_nat_1c",
            "aws_route_table.myecs_route_table_private_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myecs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:route-table/rtb-0d5610ba3a467662c",
            "id": "rtb-0d5610ba3a467662c",
            "owner_id": "786832920677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0831ec71b35ce5814",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myecs_route_table"
            },
            "tags_all": {
              "Name": "myecs_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myecs_route_table_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:route-table/rtb-03e8d6fab5269aad6",
            "id": "rtb-03e8d6fab5269aad6",
            "owner_id": "786832920677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myecs_route_table_private_1a"
            },
            "tags_all": {
              "Name": "myecs_route_table_private_1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myecs_route_table_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:route-table/rtb-06750f75f2810506b",
            "id": "rtb-06750f75f2810506b",
            "owner_id": "786832920677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myecs_route_table_private_1c"
            },
            "tags_all": {
              "Name": "myecs_route_table_private_1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myecs_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d916ffe9d404d200",
            "route_table_id": "rtb-03e8d6fab5269aad6",
            "subnet_id": "subnet-0d317fd393095d459"
          },
          "dependencies": [
            "aws_route_table.myecs_route_table_private_1a",
            "aws_subnet.myecs_private_1a",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myecs_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f406c4f08c1f2145",
            "route_table_id": "rtb-06750f75f2810506b",
            "subnet_id": "subnet-0d47e9290509f7196"
          },
          "dependencies": [
            "aws_route_table.myecs_route_table_private_1c",
            "aws_subnet.myecs_private_1c",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0822d2509ec560237",
            "route_table_id": "rtb-0d5610ba3a467662c",
            "subnet_id": "subnet-0424c04271c4b727c"
          },
          "dependencies": [
            "aws_route_table.myecs_route_table",
            "aws_subnet.myecs_public_1a",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384cb12b10941106",
            "route_table_id": "rtb-0d5610ba3a467662c",
            "subnet_id": "subnet-09cf429a5729a7fcd"
          },
          "dependencies": [
            "aws_route_table.myecs_route_table",
            "aws_subnet.myecs_public_1c",
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myecs_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:subnet/subnet-0d317fd393095d459",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d317fd393095d459",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786832920677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myecs_private_1a",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "myecs_private_1a",
              "Type": "Private"
            },
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myecs_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:subnet/subnet-0d47e9290509f7196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d47e9290509f7196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786832920677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myecs_private_1c",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "myecs_private_1c",
              "Type": "Private"
            },
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myecs_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:subnet/subnet-0424c04271c4b727c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0424c04271c4b727c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786832920677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myecs_public_1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "myecs_public_1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myecs_public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:subnet/subnet-09cf429a5729a7fcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cf429a5729a7fcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786832920677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myecs_public_1c",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "myecs_public_1c",
              "Type": "Public"
            },
            "vpc_id": "vpc-03dc07808732f6931"
          },
          "dependencies": [
            "aws_vpc.myecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:786832920677:vpc/vpc-03dc07808732f6931",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037534e789fa832fd",
            "default_route_table_id": "rtb-0644b07f179edcb1b",
            "default_security_group_id": "sg-002b0bb3ec1b8b373",
            "dhcp_options_id": "dopt-0c8d216440db1937c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dc07808732f6931",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0644b07f179edcb1b",
            "owner_id": "786832920677",
            "tags": {
              "Name": "myecs"
            },
            "tags_all": {
              "Name": "myecs"
            }
          }
        }
      ]
    }
  ]
}